Test'*' to run all tests

--- a/lma.ipynb
+++ b/lma.ipynb
@@ -218,6 +218,7 @@
    "source": [
     "]dinput\n",
     "Test←{\n",
+    "    0::⎕SIGNAL ⎕EN\n",
     "    t←()\n",
     "    ⍝ Tests ability to navigate sharp, narrow valleys and handle situations where the Jacobian\n",
     "    ⍝ may lead to a locally rank-deficient J^T J matrix (eg. zero diagonal elements), requiring\n",
@@ -290,7 +291,7 @@
     "        r\n",
     "    }\n",
     "    ⍺←1e¯6 ⋄ tol←⍺ ⋄ CMP←{tol>|⍺-⍵} ⋄ R←{⎕←(10↑''),⍵.((6 0⍕iter),(12 ¯5⍕sse),p) ⋄ ⍵}\n",
-    "    (t ⎕NS'tol' 'CMP' 'R'){⎕←⍵ ⋄ 0∊⍺⍎⍵,'⍬':⎕SIGNAL 8 ⋄ _←0}¨↓t.⎕NL 3\n",
+    "    (t ⎕NS'tol' 'CMP' 'R'){⎕←⍵ ⋄ 0∊⍺⍎⍵,'⍬':⎕SIGNAL 8 ⋄ _←0}¨(↓t.⎕NL 3)⊣⍣(⍵≡'*')⊆⍵\n",
     "}"
    ]
   },
@@ -322,7 +323,7 @@
        "              21 8.5502E¯15  1 5.82997047E¯8 9.234613263E¯8\n",
        "              10 3.6281E¯20  1 1.201260465E¯10 1.902399678E¯10\n",
        "Linear    \n",
-       "               1 1.6153E¯24  1 2 3 4 5 6 7 8 9 10\n",
+       "               1 1.1496E¯24  1 2 3 4 5 6 7 8 9 10\n",
        "Powell    \n",
        "              99 9.8312E¯31  2.241601808E¯8 ¯2.241601808E¯9 1.446057221E¯8 1.446057221E¯8\n",
        "               1 0.0000E0    0 0 0 0\n",
@@ -347,7 +348,7 @@
     }
    ],
    "source": [
-    "Test⍬"
+    "Test'*'"
    ]
   },
   {
@@ -397,12 +398,12 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌──────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│  0.00000  1.00000  2.00000 3.00000 4.00000  5.00000 6.00000  7.00000  8.00000 9.00000│\n",
-       "│ 10.94049  6.98360  4.64838 3.32973 2.41963  1.78182 1.60779  1.19361  1.13762 1.13757│\n",
-       "│ 11.00000  7.06531  4.67879 3.23130 2.35335  1.82085 1.49787  1.30197  1.18316 1.11109│\n",
-       "│ ¯0.05951 ¯0.08171 ¯0.03041 0.09843 0.06628 ¯0.03903 0.10992 ¯0.10837 ¯0.04553 0.02648│\n",
-       "└──────────────────────────────────────────────────────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌──────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│  0.00000 1.00000 2.00000 3.00000 4.00000 5.00000 6.00000 7.00000 8.00000  9.00000│\n",
+       "│ 10.98546 7.14172 4.76324 3.30897 2.39655 1.90616 1.57520 1.42679 1.29649  1.02389│\n",
+       "│ 11.00000 7.06531 4.67879 3.23130 2.35335 1.82085 1.49787 1.30197 1.18316  1.11109│\n",
+       "│ ¯0.01454 0.07641 0.08444 0.07767 0.04320 0.08531 0.07733 0.12481 0.11334 ¯0.08720│\n",
+       "└──────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -413,9 +414,9 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬─────────────────────────────────────┐\n",
-       "│7│0.04405728821│4.241777557E¯18│0.000063999999│9.922581951 0.4929062121 0.9866677078│\n",
-       "└─┴─────────────┴───────────────┴──────────────┴─────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬────────────────────────────────────┐\n",
+       "│6│0.02862000618│6.014428845E¯16│0.000319999999│9.955315694 0.4900891233 1.031973737│\n",
+       "└─┴─────────────┴───────────────┴──────────────┴────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -426,15 +427,14 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">      0   4.9736E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
-       "      1   2.3055E1      2.6129E¯1     1.0000E0      6.5492E0    3.7617E¯1   2.5307E0   \n",
-       "      2   2.3562E¯1     2.4292E¯1     2.0000E¯1     9.7229E0    5.4119E¯1   1.1487E0   \n",
-       "      3   4.7749E¯2     6.0274E¯4     4.0000E¯2     9.9071E0    4.9115E¯1   1.0020E0   \n",
-       "      4   4.4057E¯2     4.8241E¯6     8.0000E¯3     9.9226E0    4.9288E¯1   9.8659E¯1  \n",
-       "      5   4.4057E¯2     6.5408E¯11    1.6000E¯3     9.9226E0    4.9291E¯1   9.8667E¯1  \n",
-       "      6   4.4057E¯2     1.9918E¯14    3.2000E¯4     9.9226E0    4.9291E¯1   9.8667E¯1  \n",
-       "      7   4.4057E¯2     4.2418E¯18    6.4000E¯5     9.9226E0    4.9291E¯1   9.8667E¯1  \n",
-       " s: 4.4057E¯2    p: 9.9226E0    4.9291E¯1   9.8667E¯1\n",
+       "<pre class=\"language-APL\">      0   4.9753E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
+       "      1   2.2227E1      2.7200E¯1     1.0000E0      6.6173E0    3.7573E¯1   2.5443E0   \n",
+       "      2   2.1556E¯1     2.3255E¯1     2.0000E¯1     9.7591E0    5.3743E¯1   1.1939E0   \n",
+       "      3   3.2408E¯2     5.8966E¯4     4.0000E¯2     9.9399E0    4.8790E¯1   1.0455E0   \n",
+       "      4   2.8620E¯2     4.2252E¯6     8.0000E¯3     9.9553E0    4.9008E¯1   1.0320E0   \n",
+       "      5   2.8620E¯2     1.8676E¯11    1.6000E¯3     9.9553E0    4.9009E¯1   1.0320E0   \n",
+       "      6   2.8620E¯2     6.0144E¯16    3.2000E¯4     9.9553E0    4.9009E¯1   1.0320E0   \n",
+       " s: 2.8620E¯2    p: 9.9553E0    4.9009E¯1   1.0320E0\n",
        "</pre>"
       ]
      },
@@ -459,7 +459,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 4.4057E¯2    p: 9.9226E0    4.9291E¯1   9.8667E¯1\n",
+       "<pre class=\"language-APL\"> s: 2.8620E¯2    p: 9.9553E0    4.9009E¯1   1.0320E0\n",
        "</pre>"
       ]
      },
@@ -470,7 +470,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 4.4057E¯2    p: 9.9226E0    4.9291E¯1   9.8667E¯1\n",
+       "<pre class=\"language-APL\"> s: 2.8620E¯2    p: 9.9553E0    4.9009E¯1   1.0320E0\n",
        "</pre>"
       ]
      },
@@ -501,12 +501,12 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│ 0.00000 1.00000  2.00000  3.00000  4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
-       "│ 0.10044 2.10034  4.09980  6.09978  8.09977 10.09965 12.09989 14.09998 16.10046 18.09962│\n",
-       "│ 0.10000 2.10000  4.10000  6.10000  8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
-       "│ 0.00044 0.00034 ¯0.00020 ¯0.00022 ¯0.00023 ¯0.00035 ¯0.00011 ¯0.00002  0.00046 ¯0.00038│\n",
-       "└────────────────────────────────────────────────────────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌───────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│ 0.00000  1.00000  2.00000 3.00000 4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
+       "│ 0.10018  2.09977  4.09996 6.10047 8.10030 10.09979 12.09957 14.09986 16.10046 18.10023│\n",
+       "│ 0.10000  2.10000  4.10000 6.10000 8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
+       "│ 0.00018 ¯0.00023 ¯0.00004 0.00047 0.00030 ¯0.00021 ¯0.00043 ¯0.00014  0.00046  0.00023│\n",
+       "└───────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -522,15 +522,15 @@
        "      2   1.1581E3      0.0000E0      1.0000E3      0.0000E0    0.0000E0   \n",
        "      3   1.1581E3      0.0000E0      1.0000E6      0.0000E0    0.0000E0   \n",
        "      4   1.1581E3      0.0000E0      1.0000E9      0.0000E0    0.0000E0   \n",
-       "      5   1.1581E3      3.4301E¯10    1.0001E12     9.1000E¯10  2.0158E¯10 \n",
-       "      6   1.1581E3      3.4301E¯7     1.0000E9      9.1091E¯7   2.0178E¯7  \n",
-       "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1073E¯4   2.0174E¯4  \n",
-       "      8   8.4794E2      2.6756E¯1     1.0000E3      7.5750E¯1   1.7256E¯1  \n",
-       "      9   3.2730E¯1     9.9961E¯1     1.0000E0      3.8720E¯1   1.9370E0   \n",
-       "     10   8.3918E¯7     2.2135E¯2     1.0000E¯3     1.0014E¯1   2.0000E0   \n",
-       "     11   8.3794E¯7     1.0033E¯10    1.0000E¯6     1.0012E¯1   2.0000E0   \n",
-       "     12   8.3794E¯7     4.1127E¯25    9.9900E¯10    1.0012E¯1   2.0000E0   \n",
-       " s: 8.3794E¯7    p: 1.0012E¯1   2.0000E0\n",
+       "      5   1.1581E3      3.4301E¯10    1.0001E12     9.1001E¯10  2.0158E¯10 \n",
+       "      6   1.1581E3      3.4301E¯7     1.0000E9      9.1092E¯7   2.0178E¯7  \n",
+       "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1074E¯4   2.0175E¯4  \n",
+       "      8   8.4796E2      2.6756E¯1     1.0000E3      7.5751E¯1   1.7256E¯1  \n",
+       "      9   3.2732E¯1     9.9961E¯1     1.0000E0      3.8711E¯1   1.9370E0   \n",
+       "     10   8.6944E¯7     2.2136E¯2     1.0000E¯3     1.0004E¯1   2.0000E0   \n",
+       "     11   8.6820E¯7     1.0033E¯10    1.0000E¯6     1.0002E¯1   2.0000E0   \n",
+       "     12   8.6820E¯7     4.1085E¯25    9.9900E¯10    1.0002E¯1   2.0000E0   \n",
+       " s: 8.6820E¯7    p: 1.0002E¯1   2.0000E0\n",
        "</pre>"
       ]
      },
