--- a/lma.ipynb
+++ b/lma.ipynb
@@ -55,7 +55,7 @@
     "`f` is a configuration namespace or a function. Configuration namespaces can define the following configuration parameters (else, the provided defaults are used):\n",
     "\n",
     "* `toli`: Maximum number of iterations (default `1E6`)\n",
-    "* `tols`: Tolerance for the sum of squared residuals (default `tolr`)\n",
+    "* `tols`: Tolerance for the sum of squared residuals (default `⎕CT`)\n",
     "* `tolr`: Tolerance for relative change, either in the solution or the residual (default `⎕CT`)\n",
     "* `tolg`: Tolerance for the gain ratio to accept or reject a step (default `1E¯2`)\n",
     "* `dini`: Initial damping factor for `d=1` (default `1E¯2`)\n",
@@ -175,14 +175,14 @@
    "outputs": [],
    "source": [
     "]dinput\n",
-    "LMA←{⍺←⊢ ⋄ p←⊃w←⊆⍵ ⋄ ⍝0::⎕SIGNAL ⎕EN                    ⍝ pass signals\n",
+    "LMA←{⍺←⊢ ⋄ p←⊃w←⊆⍵ ⋄ 0::⎕SIGNAL ⎕EN                    ⍝ pass signals\n",
     "\n",
     "    n←'d',¨'ini' 'inc' 'dec' 'max' 'min'               ⍝ damping\n",
     "    n←('isrg',⍨¨⊂'tol'),n                              ⍝ tolerances\n",
-    "    nc←'tols' 'ddec' 'dmin'                            ⍝ computed defaults\n",
+    "    nc←'ddec' 'dmin'                                   ⍝ computed defaults\n",
     "    nr←'iter' 'sse' 'rel' 'dnorm' 'p'                  ⍝ results\n",
     "    c←(                                                ⍝ default config\n",
-    "        toli:1e3 ⋄ tolr:⎕CT ⋄ tolg:1e¯2                ⍝     tolerances\n",
+    "        toli:1e3 ⋄ tols:⎕CT ⋄ tolr:⎕CT ⋄ tolg:1e¯2     ⍝     tolerances\n",
     "        dini:1e¯2 ⋄ dinc:5 ⋄ dmax:÷⎕CT                 ⍝     damping\n",
     "        p0:p ⋄ verbose:0                               ⍝     initial parameters and logging\n",
     "    )\n",
@@ -194,7 +194,7 @@
     "    2<≢w:⎕SIGNAL 11                                    ⍝ wrong argument\n",
     "    \n",
     "    c.CallBack←⊢ ⋄ c←c ⎕NS ⍺⍺ ⋄ c.dnorm←1⊣⍣(1=≢w)⊃⌽w   ⍝ default callback and actual config\n",
-    "    _←c ⎕VSET(↑nc)(c⎕VGET(↑nc)c.(tolr,÷dinc dmax))     ⍝ computed defaults\n",
+    "    _←c ⎕VSET(↑nc)(c⎕VGET(↑nc)c.(÷dinc dmax))          ⍝ computed defaults\n",
     "    c←⍺{(3=⎕NC'⍺⍺')∧0≠⍵.⎕NC'Left':⍵ ⋄ ⍵.Left←⍺⍺ ⋄ ⍵}c  ⍝ left arg\n",
     "    CB←{c.CallBack c⎕VSET(↑nr)⍵}⊣P⍣(c.verbose≢0)       ⍝ callback function\n",
     "    c⊣c.⎕DF DF(c⎕VGET↑n)c.(Left∘Eval)LM CB p c.dnorm   ⍝ return namespace\n",
@@ -218,7 +218,7 @@
    "source": [
     "]dinput\n",
     "Test←{\n",
-    "    0::⎕SIGNAL ⎕EN\n",
+    "    0::⎕EM ⎕SIGNAL ⎕EN\n",
     "    t←()\n",
     "    ⍝ Tests ability to navigate sharp, narrow valleys and handle situations where the Jacobian\n",
     "    ⍝ may lead to a locally rank-deficient J^T J matrix (eg. zero diagonal elements), requiring\n",
@@ -265,9 +265,9 @@
     "            a b c d←⍵ ⋄ r5 r10←5 10*÷2 ⋄ y←(a+10×b)(r5×c-d)(×⍨b-2×c)(r10××⍨a-d)\n",
     "            y[1 10 0 0 ⋄ 0 0 r5(-r5) ⋄ 0(2×b-2×c)(-2×b-2×c)0 ⋄ (2×r10×a-d)0 0(-2×r10×a-d)]\n",
     "        }\n",
-    "        r←(4⍴0)CMP(R P #.LMA(3 ¯1 0 1)(tolr:1e¯30)).p                 ⍝ standard starting point\n",
-    "        r,←(4⍴0)CMP(R P #.LMA(0 0 0 0)(tolr:1e¯30)).p                 ⍝ solution (convergence at zero step)\n",
-    "        r,←(4⍴0)CMP(R P #.LMA(1 1 1 1)(tolr:1e¯30)).p                 ⍝ far from solution\n",
+    "        r←(4⍴0)CMP(R P #.LMA(3 ¯1 0 1)(tols:1e¯30)).p                 ⍝ standard starting point\n",
+    "        r,←(4⍴0)CMP(R P #.LMA(0 0 0 0)(tols:1e¯30)).p                 ⍝ solution (convergence at zero step)\n",
+    "        r,←(4⍴0)CMP(R P #.LMA(1 1 1 1)(tols:1e¯30)).p                 ⍝ far from solution\n",
     "        r\n",
     "    }\n",
     "    ⍝ Tests LMA's performance in minimizing a classic non-linear function characterized by\n",
@@ -285,13 +285,13 @@
     "    }\n",
     "    ⍝ Check that algorithm finishes on termination conditions\n",
     "    t.Terminate←{\n",
-    "        r←(R #.Rosenbrock #.LMA(0 0)(tolr:0)).(iter>toli)             ⍝ number of iterations\n",
-    "        r,←(R #.Rosenbrock #.LMA(0 0)(tols:0)).(rel<tolr)             ⍝ relative change\n",
-    "        r,←(R #.Rosenbrock #.LMA(0 0)(tolr:0 ⋄ dmax:1e6)).dnorm>1e6   ⍝ maximum damping\n",
+    "        r←(R #.Rosenbrock #.LMA(0 0)(tols:0 ⋄ tolr:0)).(iter>toli)              ⍝ number of iterations\n",
+    "        r,←(R #.Rosenbrock #.LMA(0 0)(tols:0)).(rel<tolr)                       ⍝ relative change\n",
+    "        r,←(R #.Rosenbrock #.LMA(0 0)(tols:0 ⋄ dmax:1e6)).((dnorm>1e6)∧rel=0)   ⍝ maximum damping\n",
     "        r\n",
     "    }\n",
     "    ⍺←1e¯6 ⋄ tol←⍺ ⋄ CMP←{tol>|⍺-⍵} ⋄ R←{⎕←(10↑''),⍵.((6 0⍕iter),(12 ¯5⍕sse),p) ⋄ ⍵}\n",
-    "    (t ⎕NS'tol' 'CMP' 'R'){⎕←⍵ ⋄ 0∊⍺⍎⍵,'⍬':⎕SIGNAL 8 ⋄ _←0}¨(↓t.⎕NL 3)⊣⍣(⍵≡'*')⊆⍵\n",
+    "    (t⎕NS'tol' 'CMP' 'R'){⎕←⍵ ⋄ 0∊⍺⍎⍵,'⍬':('TEST FAILED: ',⍵)⎕SIGNAL 8 ⋄ _←0}¨(↓t.⎕NL 3)⊣⍣(⍵≡'*')⊆⍵\n",
     "}"
    ]
   },
@@ -323,7 +323,7 @@
        "              21 8.5502E¯15  1 5.82997047E¯8 9.234613263E¯8\n",
        "              10 3.6281E¯20  1 1.201260465E¯10 1.902399678E¯10\n",
        "Linear    \n",
-       "               1 1.1496E¯24  1 2 3 4 5 6 7 8 9 10\n",
+       "               1 2.6395E¯24  1 2 3 4 5 6 7 8 9 10\n",
        "Powell    \n",
        "              99 9.8312E¯31  2.241601808E¯8 ¯2.241601808E¯9 1.446057221E¯8 1.446057221E¯8\n",
        "               1 0.0000E0    0 0 0 0\n",
@@ -398,12 +398,12 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌──────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│  0.00000 1.00000 2.00000 3.00000 4.00000 5.00000 6.00000 7.00000 8.00000  9.00000│\n",
-       "│ 10.98546 7.14172 4.76324 3.30897 2.39655 1.90616 1.57520 1.42679 1.29649  1.02389│\n",
-       "│ 11.00000 7.06531 4.67879 3.23130 2.35335 1.82085 1.49787 1.30197 1.18316  1.11109│\n",
-       "│ ¯0.01454 0.07641 0.08444 0.07767 0.04320 0.08531 0.07733 0.12481 0.11334 ¯0.08720│\n",
-       "└──────────────────────────────────────────────────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│  0.00000  1.00000 2.00000 3.00000 4.00000 5.00000  6.00000 7.00000 8.00000  9.00000│\n",
+       "│ 11.04490  7.02641 4.78881 3.33836 2.42743 1.87071  1.45254 1.36051 1.20346  1.05613│\n",
+       "│ 11.00000  7.06531 4.67879 3.23130 2.35335 1.82085  1.49787 1.30197 1.18316  1.11109│\n",
+       "│  0.04490 ¯0.03889 0.11002 0.10706 0.07407 0.04986 ¯0.04533 0.05854 0.02030 ¯0.05496│\n",
+       "└────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -414,9 +414,9 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬────────────────────────────────────┐\n",
-       "│6│0.02862000618│6.014428845E¯16│0.000319999999│9.955315694 0.4900891233 1.031973737│\n",
-       "└─┴─────────────┴───────────────┴──────────────┴────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬───────────────────────────────────┐\n",
+       "│7│0.02590559852│3.103683674E¯18│0.000063999999│10.02102421 0.48908609 0.9857343032│\n",
+       "└─┴─────────────┴───────────────┴──────────────┴───────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -427,14 +427,15 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">      0   4.9753E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
-       "      1   2.2227E1      2.7200E¯1     1.0000E0      6.6173E0    3.7573E¯1   2.5443E0   \n",
-       "      2   2.1556E¯1     2.3255E¯1     2.0000E¯1     9.7591E0    5.3743E¯1   1.1939E0   \n",
-       "      3   3.2408E¯2     5.8966E¯4     4.0000E¯2     9.9399E0    4.8790E¯1   1.0455E0   \n",
-       "      4   2.8620E¯2     4.2252E¯6     8.0000E¯3     9.9553E0    4.9008E¯1   1.0320E0   \n",
-       "      5   2.8620E¯2     1.8676E¯11    1.6000E¯3     9.9553E0    4.9009E¯1   1.0320E0   \n",
-       "      6   2.8620E¯2     6.0144E¯16    3.2000E¯4     9.9553E0    4.9009E¯1   1.0320E0   \n",
-       " s: 2.8620E¯2    p: 9.9553E0    4.9009E¯1   1.0320E0\n",
+       "<pre class=\"language-APL\">      0   5.0737E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
+       "      1   2.2902E1      2.7406E¯1     1.0000E0      6.6304E0    3.7868E¯1   2.5462E0   \n",
+       "      2   2.1194E¯1     2.4336E¯1     2.0000E¯1     9.8384E0    5.3515E¯1   1.1336E0   \n",
+       "      3   2.9078E¯2     4.9028E¯4     4.0000E¯2     1.0006E1    4.8757E¯1   1.0004E0   \n",
+       "      4   2.5906E¯2     4.2858E¯6     8.0000E¯3     1.0021E1    4.8907E¯1   9.8567E¯1  \n",
+       "      5   2.5906E¯2     5.0636E¯11    1.6000E¯3     1.0021E1    4.8909E¯1   9.8573E¯1  \n",
+       "      6   2.5906E¯2     1.4744E¯14    3.2000E¯4     1.0021E1    4.8909E¯1   9.8573E¯1  \n",
+       "      7   2.5906E¯2     3.1037E¯18    6.4000E¯5     1.0021E1    4.8909E¯1   9.8573E¯1  \n",
+       " s: 2.5906E¯2    p: 1.0021E1    4.8909E¯1   9.8573E¯1\n",
        "</pre>"
       ]
      },
@@ -459,7 +460,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 2.8620E¯2    p: 9.9553E0    4.9009E¯1   1.0320E0\n",
+       "<pre class=\"language-APL\"> s: 2.5906E¯2    p: 1.0021E1    4.8909E¯1   9.8573E¯1\n",
        "</pre>"
       ]
      },
@@ -470,7 +471,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 2.8620E¯2    p: 9.9553E0    4.9009E¯1   1.0320E0\n",
+       "<pre class=\"language-APL\"> s: 2.5906E¯2    p: 1.0021E1    4.8909E¯1   9.8573E¯1\n",
        "</pre>"
       ]
      },
@@ -501,12 +502,12 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌───────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│ 0.00000  1.00000  2.00000 3.00000 4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
-       "│ 0.10018  2.09977  4.09996 6.10047 8.10030 10.09979 12.09957 14.09986 16.10046 18.10023│\n",
-       "│ 0.10000  2.10000  4.10000 6.10000 8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
-       "│ 0.00018 ¯0.00023 ¯0.00004 0.00047 0.00030 ¯0.00021 ¯0.00043 ¯0.00014  0.00046  0.00023│\n",
-       "└───────────────────────────────────────────────────────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌──────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│ 0.00000 1.00000 2.00000  3.00000 4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
+       "│ 0.10044 2.10045 4.10038  6.09961 8.10043 10.10017 12.09969 14.09979 16.10006 18.10025│\n",
+       "│ 0.10000 2.10000 4.10000  6.10000 8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
+       "│ 0.00044 0.00045 0.00038 ¯0.00039 0.00043  0.00017 ¯0.00031 ¯0.00021  0.00006  0.00025│\n",
+       "└──────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -525,12 +526,12 @@
        "      5   1.1581E3      3.4301E¯10    1.0001E12     9.1001E¯10  2.0158E¯10 \n",
        "      6   1.1581E3      3.4301E¯7     1.0000E9      9.1092E¯7   2.0178E¯7  \n",
        "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1074E¯4   2.0175E¯4  \n",
-       "      8   8.4796E2      2.6756E¯1     1.0000E3      7.5751E¯1   1.7256E¯1  \n",
-       "      9   3.2732E¯1     9.9961E¯1     1.0000E0      3.8711E¯1   1.9370E0   \n",
-       "     10   8.6944E¯7     2.2136E¯2     1.0000E¯3     1.0004E¯1   2.0000E0   \n",
-       "     11   8.6820E¯7     1.0033E¯10    1.0000E¯6     1.0002E¯1   2.0000E0   \n",
-       "     12   8.6820E¯7     4.1085E¯25    9.9900E¯10    1.0002E¯1   2.0000E0   \n",
-       " s: 8.6820E¯7    p: 1.0002E¯1   2.0000E0\n",
+       "      8   8.4795E2      2.6756E¯1     1.0000E3      7.5752E¯1   1.7256E¯1  \n",
+       "      9   3.2728E¯1     9.9961E¯1     1.0000E0      3.8740E¯1   1.9370E0   \n",
+       "     10   7.9891E¯7     2.2133E¯2     1.0000E¯3     1.0035E¯1   2.0000E0   \n",
+       "     11   7.9767E¯7     1.0032E¯10    1.0000E¯6     1.0033E¯1   2.0000E0   \n",
+       "     12   7.9767E¯7     4.1132E¯25    9.9900E¯10    1.0033E¯1   2.0000E0   \n",
+       " s: 7.9767E¯7    p: 1.0033E¯1   2.0000E0\n",
        "</pre>"
       ]
      },
