--- a/lma.ipynb
+++ b/lma.ipynb
@@ -182,8 +182,8 @@
     "    nc←'ddec' 'dmin'                                   ⍝ computed defaults\n",
     "    nr←'iter' 'sse' 'rel' 'dnorm' 'p'                  ⍝ results\n",
     "    c←(                                                ⍝ default config\n",
-    "        toli:1e3 ⋄ tols:⎕CT ⋄ tolr:⎕CT ⋄ tolg:1e¯2     ⍝     tolerances\n",
-    "        dini:1e¯2 ⋄ dinc:5 ⋄ dmax:÷⎕CT                 ⍝     damping\n",
+    "        toli:1000 ⋄ tols:⎕CT ⋄ tolr:⎕CT ⋄ tolg:0.01    ⍝     tolerances\n",
+    "        dini:0.01 ⋄ dinc:5 ⋄ dmax:÷⎕CT                 ⍝     damping\n",
     "        p0:p ⋄ verbose:0                               ⍝     initial parameters and logging\n",
     "    )\n",
     "    F←{1((⊂6 0⍕↑),12 ¯5∘⍕¨⍤↓)⍵} ⋄ P←{⎕←F ⍵}            ⍝ format and print\n",
@@ -194,10 +194,10 @@
     "    2<≢w:⎕SIGNAL 11                                    ⍝ wrong argument\n",
     "    \n",
     "    c.CallBack←⊢ ⋄ c←c ⎕NS ⍺⍺ ⋄ c.dnorm←1⊣⍣(1=≢w)⊃⌽w   ⍝ default callback and actual config\n",
-    "    _←c ⎕VSET(↑nc)(c⎕VGET(↑nc)c.(÷dinc dmax))          ⍝ computed defaults\n",
+    "    _←c ⎕VSET(↑nc)(c ⎕VGET(↑nc)c.(÷dinc dmax))         ⍝ computed defaults\n",
     "    c←⍺{(3=⎕NC'⍺⍺')∧0≠⍵.⎕NC'Left':⍵ ⋄ ⍵.Left←⍺⍺ ⋄ ⍵}c  ⍝ left arg\n",
-    "    CB←{c.CallBack c⎕VSET(↑nr)⍵}⊣P⍣(c.verbose≢0)       ⍝ callback function\n",
-    "    c⊣c.⎕DF DF(c⎕VGET↑n)c.(Left∘Eval)LM CB p c.dnorm   ⍝ return namespace\n",
+    "    CB←{c.CallBack c ⎕VSET(↑nr)⍵}⊣P⍣(c.verbose≢0)      ⍝ callback function\n",
+    "    c⊣c.⎕DF DF(c ⎕VGET↑n)c.(Left∘Eval)LM CB p c.dnorm  ⍝ return namespace\n",
     "}"
    ]
   },
@@ -217,8 +217,7 @@
    "outputs": [],
    "source": [
     "]dinput\n",
-    "Test←{\n",
-    "    0::⎕EM ⎕SIGNAL ⎕EN\n",
+    "Test←{0::⎕EM ⎕SIGNAL ⎕EN\n",
     "    t←()\n",
     "    ⍝ Tests ability to navigate sharp, narrow valleys and handle situations where the Jacobian\n",
     "    ⍝ may lead to a locally rank-deficient J^T J matrix (eg. zero diagonal elements), requiring\n",
@@ -323,7 +322,7 @@
        "              21 8.5502E¯15  1 5.82997047E¯8 9.234613263E¯8\n",
        "              10 3.6281E¯20  1 1.201260465E¯10 1.902399678E¯10\n",
        "Linear    \n",
-       "               1 2.6395E¯24  1 2 3 4 5 6 7 8 9 10\n",
+       "               1 2.0438E¯24  1 2 3 4 5 6 7 8 9 10\n",
        "Powell    \n",
        "              99 9.8312E¯31  2.241601808E¯8 ¯2.241601808E¯9 1.446057221E¯8 1.446057221E¯8\n",
        "               1 0.0000E0    0 0 0 0\n",
@@ -400,9 +399,9 @@
       "text/html": [
        "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────┐\n",
        "│  0.00000  1.00000 2.00000 3.00000 4.00000 5.00000  6.00000 7.00000 8.00000  9.00000│\n",
-       "│ 11.04490  7.02641 4.78881 3.33836 2.42743 1.87071  1.45254 1.36051 1.20346  1.05613│\n",
+       "│ 11.08621  7.00291 4.77607 3.30302 2.40374 1.86767  1.42641 1.40855 1.18626  1.04773│\n",
        "│ 11.00000  7.06531 4.67879 3.23130 2.35335 1.82085  1.49787 1.30197 1.18316  1.11109│\n",
-       "│  0.04490 ¯0.03889 0.11002 0.10706 0.07407 0.04986 ¯0.04533 0.05854 0.02030 ¯0.05496│\n",
+       "│  0.08621 ¯0.06239 0.09728 0.07172 0.05039 0.04682 ¯0.07147 0.10657 0.00311 ¯0.06336│\n",
        "└────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
@@ -414,9 +413,9 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬───────────────────────────────────┐\n",
-       "│7│0.02590559852│3.103683674E¯18│0.000063999999│10.02102421 0.48908609 0.9857343032│\n",
-       "└─┴─────────────┴───────────────┴──────────────┴───────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬─────────────────────────────────────┐\n",
+       "│7│0.04104680269│7.565619159E¯18│0.000063999999│10.04651953 0.4956483863 0.9983484511│\n",
+       "└─┴─────────────┴───────────────┴──────────────┴─────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -427,15 +426,15 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">      0   5.0737E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
-       "      1   2.2902E1      2.7406E¯1     1.0000E0      6.6304E0    3.7868E¯1   2.5462E0   \n",
-       "      2   2.1194E¯1     2.4336E¯1     2.0000E¯1     9.8384E0    5.3515E¯1   1.1336E0   \n",
-       "      3   2.9078E¯2     4.9028E¯4     4.0000E¯2     1.0006E1    4.8757E¯1   1.0004E0   \n",
-       "      4   2.5906E¯2     4.2858E¯6     8.0000E¯3     1.0021E1    4.8907E¯1   9.8567E¯1  \n",
-       "      5   2.5906E¯2     5.0636E¯11    1.6000E¯3     1.0021E1    4.8909E¯1   9.8573E¯1  \n",
-       "      6   2.5906E¯2     1.4744E¯14    3.2000E¯4     1.0021E1    4.8909E¯1   9.8573E¯1  \n",
-       "      7   2.5906E¯2     3.1037E¯18    6.4000E¯5     1.0021E1    4.8909E¯1   9.8573E¯1  \n",
-       " s: 2.5906E¯2    p: 1.0021E1    4.8909E¯1   9.8573E¯1\n",
+       "<pre class=\"language-APL\">      0   5.1258E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
+       "      1   2.3638E1      2.7524E¯1     1.0000E0      6.6100E0    3.7997E¯1   2.5693E0   \n",
+       "      2   2.3626E¯1     2.4874E¯1     2.0000E¯1     9.8528E0    5.4362E¯1   1.1538E0   \n",
+       "      3   4.4549E¯2     5.4655E¯4     4.0000E¯2     1.0031E1    4.9404E¯1   1.0137E0   \n",
+       "      4   4.1047E¯2     4.6312E¯6     8.0000E¯3     1.0047E1    4.9562E¯1   9.9827E¯1  \n",
+       "      5   4.1047E¯2     7.3764E¯11    1.6000E¯3     1.0047E1    4.9565E¯1   9.9835E¯1  \n",
+       "      6   4.1047E¯2     2.7332E¯14    3.2000E¯4     1.0047E1    4.9565E¯1   9.9835E¯1  \n",
+       "      7   4.1047E¯2     7.5656E¯18    6.4000E¯5     1.0047E1    4.9565E¯1   9.9835E¯1  \n",
+       " s: 4.1047E¯2    p: 1.0047E1    4.9565E¯1   9.9835E¯1\n",
        "</pre>"
       ]
      },
@@ -460,7 +459,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 2.5906E¯2    p: 1.0021E1    4.8909E¯1   9.8573E¯1\n",
+       "<pre class=\"language-APL\"> s: 4.1047E¯2    p: 1.0047E1    4.9565E¯1   9.9835E¯1\n",
        "</pre>"
       ]
      },
@@ -471,7 +470,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 2.5906E¯2    p: 1.0021E1    4.8909E¯1   9.8573E¯1\n",
+       "<pre class=\"language-APL\"> s: 4.1047E¯2    p: 1.0047E1    4.9565E¯1   9.9835E¯1\n",
        "</pre>"
       ]
      },
@@ -502,12 +501,12 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌──────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│ 0.00000 1.00000 2.00000  3.00000 4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
-       "│ 0.10044 2.10045 4.10038  6.09961 8.10043 10.10017 12.09969 14.09979 16.10006 18.10025│\n",
-       "│ 0.10000 2.10000 4.10000  6.10000 8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
-       "│ 0.00044 0.00045 0.00038 ¯0.00039 0.00043  0.00017 ¯0.00031 ¯0.00021  0.00006  0.00025│\n",
-       "└──────────────────────────────────────────────────────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│  0.00000  1.00000 2.00000 3.00000  4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
+       "│  0.09980  2.09980 4.10046 6.10017  8.09954 10.10027 12.10028 14.09971 16.10040 18.09994│\n",
+       "│  0.10000  2.10000 4.10000 6.10000  8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
+       "│ ¯0.00020 ¯0.00020 0.00046 0.00017 ¯0.00046  0.00027  0.00028 ¯0.00029  0.00040 ¯0.00006│\n",
+       "└────────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -523,15 +522,15 @@
        "      2   1.1581E3      0.0000E0      1.0000E3      0.0000E0    0.0000E0   \n",
        "      3   1.1581E3      0.0000E0      1.0000E6      0.0000E0    0.0000E0   \n",
        "      4   1.1581E3      0.0000E0      1.0000E9      0.0000E0    0.0000E0   \n",
-       "      5   1.1581E3      3.4301E¯10    1.0001E12     9.1001E¯10  2.0158E¯10 \n",
-       "      6   1.1581E3      3.4301E¯7     1.0000E9      9.1092E¯7   2.0178E¯7  \n",
-       "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1074E¯4   2.0175E¯4  \n",
-       "      8   8.4795E2      2.6756E¯1     1.0000E3      7.5752E¯1   1.7256E¯1  \n",
-       "      9   3.2728E¯1     9.9961E¯1     1.0000E0      3.8740E¯1   1.9370E0   \n",
-       "     10   7.9891E¯7     2.2133E¯2     1.0000E¯3     1.0035E¯1   2.0000E0   \n",
-       "     11   7.9767E¯7     1.0032E¯10    1.0000E¯6     1.0033E¯1   2.0000E0   \n",
-       "     12   7.9767E¯7     4.1132E¯25    9.9900E¯10    1.0033E¯1   2.0000E0   \n",
-       " s: 7.9767E¯7    p: 1.0033E¯1   2.0000E0\n",
+       "      5   1.1581E3      3.4300E¯10    1.0001E12     9.1000E¯10  2.0158E¯10 \n",
+       "      6   1.1581E3      3.4300E¯7     1.0000E9      9.1091E¯7   2.0178E¯7  \n",
+       "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1073E¯4   2.0175E¯4  \n",
+       "      8   8.4796E2      2.6756E¯1     1.0000E3      7.5751E¯1   1.7256E¯1  \n",
+       "      9   3.2732E¯1     9.9961E¯1     1.0000E0      3.8706E¯1   1.9370E0   \n",
+       "     10   9.0167E¯7     2.2137E¯2     1.0000E¯3     9.9984E¯2   2.0000E0   \n",
+       "     11   9.0043E¯7     1.0033E¯10    1.0000E¯6     9.9964E¯2   2.0000E0   \n",
+       "     12   9.0043E¯7     4.1128E¯25    9.9900E¯10    9.9964E¯2   2.0000E0   \n",
+       " s: 9.0043E¯7    p: 9.9964E¯2   2.0000E0\n",
        "</pre>"
       ]
      },
