some minor corrections to the tutorial

--- a/lma.ipynb
+++ b/lma.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "## Usage\n",
     "\n",
-    "### ` Jacobian` Operator\n",
+    "### `Jacobian` Operator\n",
     "\n",
     "    R←{X}f Jacobian Y\n",
     "    \n",
@@ -662,7 +662,7 @@
    "id": "f24a386b",
    "metadata": {},
    "source": [
-    "To specify configuration options, we define a configuration namespace `cfg`. We must provide an evaluation function (the `LinEval` function that we just defined), and we will also set a very tight cost tolerance to a very low value, since we know that an exact solution exists."
+    "To specify configuration options, we define a configuration namespace `cfg`. We must provide an evaluation function (the `LinEval` function that we just defined), and we will also set a very tight cost tolerance , since we know that an exact solution exists."
    ]
   },
   {
@@ -793,7 +793,7 @@
    "id": "301582a5",
    "metadata": {},
    "source": [
-    "The iteration number is in the first column, cost, relative change and normalized damping factor are in the second, third and fourth columns, and the accepted solution parameters follow.\n",
+    "The iteration number is in the first column; cost, relative change and normalized damping factor are in the second, third and fourth columns; and the accepted solution parameters follow.\n",
     "\n",
     "We observe that the cost is reduced during each iteration without problems. This indicates that we can reduce the damping factor. Actually, we can reduce it to the minimum using `0` as normalized damping factor."
    ]
@@ -827,7 +827,7 @@
    "id": "44327f19",
    "metadata": {},
    "source": [
-    "Convergence was achieved in a single iteration now!\n",
+    "Convergence is achieved in a single iteration now!\n",
     "\n",
     "Notice the flexibility of the different ways in which options can be passed to `LMA`. Alternatively, we can also pass the evaluation function directly, avoiding having to predeclare a namespace. Additional options can be specified in the right argument:"
    ]
@@ -863,9 +863,11 @@
    "source": [
     "### 2. Fundamentals of non-linear least squares (NLLS) fitting\n",
     "\n",
-    "In the next example, we will fit the parameters of a non-linear model.\n",
+    "In the next example, we will fit the parameters of a non-linear model. We will consider the exponentical decay function:\n",
     "\n",
-    "We will consider the exponentical decay function $y = C + A e^{-k x}$."
+    "$$y = C + A e^{-k x}$$\n",
+    "\n",
+    "Let's generate some data:"
    ]
   },
   {
@@ -1179,7 +1181,7 @@
    ],
    "source": [
     "RP x y ExpDecRes LMA(3⍴1)(pert:⎕CT*÷2)   ⍝ default perturbation\n",
-    "RP x y ExpDecRes LMA(3⍴1)(pert:1e0)      ⍝ large perturbation, worse prediction makes convergence worse\n",
+    "RP x y ExpDecRes LMA(3⍴1)(pert:1e0)      ⍝ large perturbation, worse prediction makes convergence slower\n",
     "RP x y ExpDecRes LMA(3⍴1)(pert:1e¯15)    ⍝ perturbation too small, inacurate result"
    ]
   },
@@ -1188,7 +1190,7 @@
    "id": "7c22a45a",
    "metadata": {},
    "source": [
-    "The default perturbation provides a good balance in this case. Very large perturbations can degrade the Jacobian approximation, resulting in slow convergence, while extremely small ones (like `1E-15`) can lead to numerical inaccuracies and poor solutions due to precision limits in finite differences.\n",
+    "Very large perturbations can degrade the Jacobian approximation, resulting in slow convergence, while extremely small ones (like `1E-15`) can lead to numerical inaccuracies and poor solutions due to precision limits in finite differences. The default perturbation provides a good balance in this case.\n",
     "\n",
     "For an accurate result, the Jacobian calculated numerically should be close to the analytical Jacobian. However, the quality of the approximation can vary depending on the actual solution parameters being used, as we can see comparing the Jacobian calculated numerically with the analytical Jacobian defined earlier. We calculate a relative error for the initial and final solution parameters:"
    ]
@@ -1234,7 +1236,7 @@
    "id": "9984d898",
    "metadata": {},
    "source": [
-    "The relative error between the analytical Jacobian and our numerical approximation (using the default pert) is very small, especially for the final solution parameters, confirming the reliability of the numerical estimation.\n",
+    "The relative error between the analytical Jacobian and our numerical approximation (using the default perturbation) is very small, especially for the final solution parameters, confirming the reliability of the numerical estimation.\n",
     "\n",
     "#### Callback function\n",
     "\n",
@@ -1289,7 +1291,7 @@
     "\n",
     "Gaussian peaks are arguably one of the most frequently encountered shapes in scientific and engineering data (spectroscopy, chromatography, signal processing, statistical distributions, etc.). Its symmetric, peak-like structure behaves differently from the monotonic exponential decay function in previous example.\n",
     "\n",
-    "For the fitting, we are going to produce virtual experimental data. First, we generate clean output data using a predefined set of parameters. Next, some small noise is added to the data, using the same `Noise` function from previous example. Finally, we create a few outliers applying a much larger perturbation, again using the `Noise` function, but with a higher left argument and applying it only to a few random points."
+    "For the fitting, we are going to produce virtual experimental data. First, we generate clean output data using a predefined set of parameters. Next, some small noise is added to the data, using the same `Noise` function from previous example. Finally, we create a few outliers applying a much larger perturbation, again using the `Noise` function, but with a larger value as left argument and applying it only to a few random points."
    ]
   },
   {
@@ -1346,7 +1348,7 @@
    "id": "a7293ccd",
    "metadata": {},
    "source": [
-    "We will fit the parameters using a numerical approximation of the Jacobian (we will compare it later with the analytical one):"
+    "We will fit the parameters using a numerical approximation of the Jacobian (we will also use the analytical one later):"
    ]
   },
   {
@@ -1444,8 +1446,8 @@
     }
    ],
    "source": [
-    "RP x y1 GaussRes LMA(4⍴1)(scale:s1←÷1+|y1-y0 ⋄ verbose:0)\n",
-    "RP x y GaussRes LMA(4⍴1)(scale:s←÷1+|y-y0 ⋄ verbose:0)"
+    "RP x y1 GaussRes LMA(4⍴1)(scale:s1←÷1+|y1-y0)\n",
+    "RP x y GaussRes LMA(4⍴1)(scale:s←÷1+|y-y0)"
    ]
   },
   {
@@ -1660,7 +1662,7 @@
    "id": "118c442e",
    "metadata": {},
    "source": [
-    "The `Robust` column shows the sum of the respective loss values, which are not directly comparable across different loss types. However, in the `L2` column, we see that when fitting the data with only small noise, most robust loss functions yield a final sum of squared raw residuals very similar to that obtained by the direct L2 fit. This demonstrates that robust loss functions do not significantly penalize performance on clean data."
+    "The `Robust` column shows the sum of the respective loss values, which are not directly comparable across different loss types. However, in the `L2` column, we see that when fitting the data with only small noise, most robust loss functions yield a final sum of squared residuals very similar to that obtained by the direct L2 fit. This demonstrates that robust loss functions do not significantly penalize performance on clean data."
    ]
   },
   {
@@ -1714,13 +1716,13 @@
    "id": "13873ba4",
    "metadata": {},
    "source": [
-    "When fitting the data containing significant outliers, the benefit of robust loss functions becomes clear. While the L2 fit is heavily skewed (high L2 cost), functions like Huber, Cauchy, SoftL1, Fair, and Arctan achieve a much lower sum of squared raw residuals by down-weighting the outliers. Their own cost is also minimized effectively. Tukey and Welsh, being redescending, can be very effective but may require careful tuning of their scale parameter, or more iterations, to converge optimally, especially if the initial scale (auto-estimated or default) is not ideal for the outlier distribution.\n",
+    "When fitting the data containing significant outliers, the benefit of robust loss functions becomes clear. While the L2 fit is heavily skewed (high L2 cost), functions like Huber, Cauchy, SoftL1, Fair, and Arctan achieve a much lower sum of squared residuals by down-weighting the outliers. Their own cost is also minimized effectively. Tukey and Welsh, being redescending, can be very effective but may require careful tuning of their scale parameter, or more iterations, to converge optimally, especially if the initial scale (auto-estimated or default) is not ideal for the outlier distribution.\n",
     "\n",
     "#### `LM` operator\n",
     "\n",
-    "The `LMA` operator provides a convenient interface for the user. However, fthe core engine can also be directly accessed using the `LM` operator (which `LMA` uses internally).\n",
+    "The `LMA` operator provides a convenient interface for the user. However, the core engine can also be directly accessed using the `LM` operator (which `LMA` uses internally).\n",
     "\n",
-    "Although the interface for `LM` is more \"arcane\", it offers the same flexibility as `LMA`. The evaluation function must be the left operand. The callback function (which in this case takes a vector instead of namespace) is specified as the right operand. All configuration parameters need to be passed to as left argument, and the right argument must be a two elements vector with the initial parameters and normalized damping factor.\n",
+    "Although the interface for `LM` is more \"arcane\", it offers the same flexibility as `LMA`. The evaluation function must be the left operand. The callback function (which in this case takes a vector instead of namespace) is specified as the right operand. All configuration parameters need to be passed as left argument, and the right argument must be a two elements vector with the initial parameters and normalized damping factor.\n",
     "\n",
     "The evaluation function may return either only the residual, the residual and the Jacobian, or also loss and weight values if it is desired to use a non-standard loss function. Let's see these three cases for the Gaussian function. We will need the analytical Jacobian given by:\n",
     "\n",
