spacing and typos

--- a/lma.ipynb
+++ b/lma.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# LMA: Levenberg-Marquardt Algorithm\n",
     "\n",
-    "The Levenberg-Marquardt algorithm is an iterative procedure widely used for solving non-linear least squares problems or for finding roots of non-linear systems of equations. This implementation is designed to be robust and offer maximum flexibility, but at the same time provides sensible defaults to facilitate its usage.\n",
+    "The Levenberg-Marquardt algorithm is an iterative procedure widely used for solving non-linear least squares problems or for finding roots of non-linear systems of equations. This implementation is designed to be robust and offer maximum flexibility, but at the same time provide maximum convenience to the user.\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -27,7 +27,7 @@
     "\n",
     "$$\\Delta s_p = \\frac{1}{2}(\\Delta p^T J^T W y + \\lambda \\Delta p^T D \\Delta p)$$\n",
     "\n",
-    "If the ratio of the actual error reduction calculated during the next iteration with respect to this prediction is above a defined limit, the current guess is accepted and the damping factor is decreased. Else, the new guess is rejected and the damping factor is increased.\n",
+    "If the ratio of the actual error reduction calculated during the next iteration with respect to this prediction is above a defined limit, the new guess is accepted and the damping factor is decreased. Else, the new guess is rejected and the damping factor is increased.\n",
     "\n",
     "The algorithm finishes once one of these conditions is met, returning the last accepted guess:\n",
     "\n",
@@ -48,7 +48,7 @@
     "* **Tukey** Redescending M-estimator that completely rejects extreme outliers (but it may lead to convergence issues if scaling is not chosen well)\n",
     "* **Welsh** Another redescending M-estimator, smoother than Tukey's in its rejection\n",
     "* **Fair** Less sensitive to large errors than $L_2$, but not redescending\n",
-    "* **Arctan** Limits maximum loss of single residuals\n",
+    "* **Arctan** Limits maximum loss of individual residuals\n",
     "\n",
     "### Normalized damping factor\n",
     "\n",
@@ -72,7 +72,7 @@
     "\n",
     "    R←{X}f Jacobian Y\n",
     "    \n",
-    "`Jacobian` is a monadic operator that takes a monadic function `f` as left operand to return an ambivalent function. This derived function returns an estimation of the Jacobian matrix of `f`, using the method of finite differences. The right argument `Y` is the value at which the Jacobian is calculated, and the optional left argument `X` is the relative perturbation to apply to `Y` in the finite differences method. If `X` is not a given, `⎕CT*÷2` is used.\n",
+    "`Jacobian` is a monadic operator that takes a monadic function `f` as left operand to return an ambivalent function. This derived function returns an estimation of the Jacobian matrix of `f` with respect to its argument, using the method of finite differences. The right argument `Y` is the value at which the Jacobian is calculated, and the optional left argument `X` is the relative perturbation to apply to `Y` in the finite differences method. If `X` is not a given, `⎕CT*÷2` is used.\n",
     "\n",
     "### `LMA` Operator\n",
     "\n",
@@ -84,11 +84,11 @@
     "\n",
     "* `toli`: Maximum number of iterations (default `1E3`)\n",
     "* `tolc`: Tolerance for the cost (sum of squared residuals or loss values) (default `⎕CT`)\n",
-    "* `tolr`: Tolerance for relative change, either in the solution or the residual (default `⎕CT`)\n",
-    "* `tolg`: Tolerance for the gain ratio to accept or reject a step (default `1E¯2`)\n",
+    "* `tolr`: Tolerance for relative change, either in the solution parameters or the cost (default `⎕CT`)\n",
+    "* `tolg`: Tolerance for the gain ratio to accept or reject a guess (default `1E¯2`)\n",
     "* `dini`: Initial damping factor for `dnorm=1` (default `1E¯2`)\n",
-    "* `dinc`: Increment of damping factor after rejected solution (default `5`)\n",
-    "* `ddec`: Decrement of damping factor after accepted solution (default `÷dinc`)\n",
+    "* `dinc`: Increment of damping factor after rejected guess (default `5`)\n",
+    "* `ddec`: Decrement of damping factor after accepted guess (default `÷dinc`)\n",
     "* `dmax`: Maximum damping factor (default `÷⎕CT`)\n",
     "* `dmin`: Minimum damping factor (default `÷dmax`)\n",
     "* `pert`: Relative perturbation applied to parameters for numerical estimation of the Jacobian (default `⎕CT*÷2`)\n",
@@ -101,7 +101,7 @@
     "* `Callback`: Callback function (default `⊢`)\n",
     "* `Eval`: Evaluation function\n",
     "\n",
-    "The evaluation function `Eval` must return either the residuals and the Jacobian for the given set of solution parameters, or only the residuals. Whenever the residual and Jacobian need to be evaluated, the function `Eval` will be called with trial parameters as right argument and left argument `X`, if given (`Eval` will be called monadically if the derived function `f LMA` is called monadically). `Eval` must return either a two elements vector with the residuals in the first element and the Jacobian in the second one, or a vector of residuals, enclosed if they are not simple scalars. If a Jacobian is not returned, a numerical estimation is calculated evaluating the residual function after applying small perturbations to the parameters (as defined by `pert`).\n",
+    "The evaluation function `Eval` must return either the residuals and the Jacobian for the given set of solution parameters, or only the residuals. Whenever the residual and Jacobian need to be evaluated, the function `Eval` will be called with solution parameters as right argument and left argument `X`, if given (`Eval` will be called monadically if the derived function `f LMA` is called monadically). `Eval` must return either a two elements vector with the residuals in the first element and the Jacobian in the second one, or a vector of residuals, enclosed if they are not simple scalars. If a Jacobian is not returned, a numerical estimation is calculated evaluating the residual function after applying small perturbations to the parameters (as defined by `pert`).\n",
     "\n",
     "The function selected by the option `loss` is used to calculate the loss from the residuals and scaling factor. If a function is provided by the user, it must be a dyadic function which returns the loss values and weights when given the residuals as right argument and scaling factor as left argument.\n",
     "\n",
@@ -123,8 +123,8 @@
     "* `cost`: Sum of loss values (squared residuals for L2)\n",
     "* `rel`: Relative change metric\n",
     "* `dnorm`: Normalized damping factor\n",
-    "* `p0`: Initial guess\n",
-    "* `p`: Accepted guess\n",
+    "* `p0`: Initial guess of solution parameters\n",
+    "* `p`: Accepted guess of solution parameters\n",
     "\n",
     "#### Notes\n",
     "\n",
@@ -141,11 +141,11 @@
     "\n",
     "### `LM` Operator\n",
     "\n",
-    "`LM` is a simplified version of `LMA`. It is a dyadic operator from which a dyadic function is derived. Usage:\n",
+    "`LM` is a lower level version of `LMA`. It is a dyadic operator from which a dyadic function is derived. Usage:\n",
     "\n",
     "    R←X f LM g Y\n",
     "\n",
-    "where `f` is a monadic evaluation function, `g` is a monadic function which takes as argument an `iter cost rel dnorm p` vector and gets called before every convergence check, `Y` is a two elements vector with the initial guess of parameters and normalized damping factor, and `X` is a vector with the configuration parameters `toli tolc tolr tolg dini dinc ddec dmax dmin`. The function `f` must return either the residuals (as a simple or nested vector), the residuals and the Jacobian, or the residuals, Jacobian, loss values and weights, for a set of parameters. If no Jacobian is provided, it is estimated numerically using `Jacobian` (with no left argument). If no loss values and weights are provided, squared residuals are used.\n",
+    "where `f` is a monadic evaluation function, `g` is a monadic function which takes as argument an `iter cost rel dnorm p` vector and gets called before every convergence check, `Y` is a two elements vector with the initial guess of parameters and normalized damping factor, and `X` is a vector with the configuration parameters `toli tolc tolr tolg dini dinc ddec dmax dmin`. The function `f` must return either the residuals (as a simple or nested vector), the residuals and the Jacobian, or the residuals, Jacobian, loss values and weights, for a set of solution parameters. If no Jacobian is provided, it is estimated numerically using `Jacobian` (with no left argument). If no loss values and weights are provided, squared residuals are used.\n",
     "\n",
     "The return value `R` is an `iter cost rel dnorm p` vector."
    ]
@@ -287,9 +287,9 @@
     "    J←{⍉↑⍺÷⍨(⍺⍺¨(⊂⍵)+↓↑(-⍳≢⍵)↑¨⍺)-⊆⍺⍺ ⍵}               ⍝ estimate Jacobian\n",
     "    E←{⍺←⊢ ⋄ (1<≡e)∧2=≢e←⍺⍺ ⍵:e ⋄ (⊃⊆e)(⍺ ⍺⍺ J ⍵)}     ⍝ evaluate, and estimate J if needed\n",
     "    M←(2÷⍨1⊥⊢⌷⍨∘⊂⍋⌷⍨∘⊂∘⌈2÷⍨0 1+≢){1@(0∘=)⍺⍺|⍵-⍺⍺ ⍵}    ⍝ median absolute deviation\n",
-    "    L←{0=c.⎕NC'sigma':∇⍵⊣c.sigma←(M ⍵)÷0.6745          ⍝ loss function (needs stddev estimation)\n",
+    "    L←{0=c.⎕NC'sigma':∇ ⍵⊣c.sigma←(M ⍵)÷0.6745         ⍝ loss function (needs stddev estimation)\n",
     "        3=⎕NC'⍺⍺':c.(sigma×⎕VGET⊂ns 1)⍺⍺ ⍵             ⍝     user defined\n",
-    "        ~(⊂⍺⍺)∊Loss.⎕NL¯3:⎕SIGNAL 6                    ⍝     if no user defined it must be in Loss\n",
+    "        ~(⊂⍺⍺)∊Loss.⎕NL ¯3:⎕SIGNAL 6                   ⍝     if no user defined it must be in Loss\n",
     "        c.(sigma×⍣(⍺⍺≢'L2')⊢scale)(Loss.⍎⍺⍺)⍵          ⍝     scaled loss function\n",
     "    }\n",
     "    3=⎕NC'⍺⍺':⍺((⍺⍺{⍵.Eval←⍺⍺ ⋄ ⍵}c)∇∇)w               ⍝ ⍺⍺ is Eval function\n",
@@ -375,7 +375,7 @@
     "    }\n",
     "    t.ExpDecLM←{p x y←#.(p x y0)\n",
     "        R←{⎕←(10↑''),((6 0⍕⊃),(12 ¯5⍕2∘⊃),4∘↓)⍵ ⋄ ⍵}\n",
-    "        cfg←1e6 ⎕CT ⎕CT 1e¯2 1e¯2 5(÷5)(÷⎕CT)⎕CT                         ⍝ ti tc tr tg d0 di dd dx dn\n",
+    "        cfg←1000 ⎕CT ⎕CT 1e¯2 1e¯2 5(÷5)(÷⎕CT)⎕CT                        ⍝ ti tc tr tg d0 di dd dx dn\n",
     "        r←p CMP⊃⌽R cfg(y-#.ExpDec∘x)#.LM⊢(5 0.1 0.5)1                    ⍝ only residuals\n",
     "        r,←p CMP⊃⌽R cfg(x y∘#.ExpDecEv)#.LM⊢(5 0.1 0.5)1                 ⍝ residual and jacobian\n",
     "        r,←p CMP⊃⌽R cfg((1,⍨⊢,(×⍨1∘↑))x y∘#.ExpDecEv)#.LM⊢(5 0.1 0.5)1   ⍝ everything\n",
@@ -389,13 +389,13 @@
     "            a b c←⍵ ⋄ m←a M b ⋄ y←(10×c-10×a T b)(10×m-1)c\n",
     "            y[((50×b)÷○+.×⍨a b)(-(50×a)÷○+.×⍨a b)10 ⋄ (10×a÷m)(10×b÷m)0 ⋄ 0 0 1]\n",
     "        }\n",
-    "        r←1 0 0 CMP(R H #.LMA¯1 0 0).p                                ⍝ standard starting point\n",
-    "        r,←1 0 0 CMP(R H #.LMA¯1.2 0.1 0.1).p                         ⍝ slightly perturbed\n",
-    "        r,←1 0 0 CMP(R H #.LMA¯0.9 ¯0.05 ¯0.05).p                     ⍝ in other direction\n",
+    "        r←1 0 0 CMP(R H #.LMA ¯1 0 0).p                               ⍝ standard starting point\n",
+    "        r,←1 0 0 CMP(R H #.LMA ¯1.2 0.1 0.1).p                        ⍝ slightly perturbed\n",
+    "        r,←1 0 0 CMP(R H #.LMA ¯0.9 ¯0.05 ¯0.05).p                    ⍝ in other direction\n",
     "        r,←1 0 0 CMP(R H #.LMA 0.5 ¯0.5 0.5).p                        ⍝ qualitatively different\n",
-    "        r,←1 0 0 CMP(R H #.LMA¯0.5 0.5 ¯0.5).p                        ⍝ another one\n",
-    "        r,←1 0 0 CMP(R H #.LMA¯1 0 10).p                              ⍝ far off in 3rd dimension\n",
-    "        r,←1 0 0 CMP(R H #.LMA¯1 0 ¯10).p                             ⍝ far off in 3rd dimension\n",
+    "        r,←1 0 0 CMP(R H #.LMA ¯0.5 0.5 ¯0.5).p                       ⍝ another one\n",
+    "        r,←1 0 0 CMP(R H #.LMA ¯1 0 10).p                             ⍝ far off in 3rd dimension\n",
+    "        r,←1 0 0 CMP(R H #.LMA ¯1 0 ¯10).p                            ⍝ far off in 3rd dimension\n",
     "        r,←1 0 0 CMP(R H #.LMA 3 4 5).p                               ⍝ away in all components\n",
     "        r\n",
     "    }\n",
@@ -484,12 +484,12 @@
        "               1 0.0000E0    10 0.5 1\n",
        "               1 0.0000E0    10 0.5 1\n",
        "               1 0.0000E0    10 0.5 1\n",
-       "               8 3.6086E¯1   9.963081164 0.5016881764 1.004084754\n",
-       "               9 9.8500E0    9.962350702 0.5019804723 1.005512492\n",
+       "              10 3.5110E¯1   9.993355141 0.5003214012 0.9990523948\n",
+       "              10 9.2032E0    9.992976435 0.5005611443 1.000141747\n",
        "            1001 3.0048E¯4   9.998625667 0.4999288685 1.000004261\n",
-       "               9 8.5776E¯2   9.963068573 0.5016652526 1.00402812\n",
-       "              10 9.7879E0    9.961998523 0.5022511401 1.006456899\n",
-       "              13 5.2351E¯2   9.963090425 0.5017453135 1.004238847\n",
+       "              11 7.9563E¯2   9.993277553 0.5003102351 0.9990638713\n",
+       "              11 9.1430E0    9.993985382 0.5007821187 1.000312007\n",
+       "              16 4.6232E¯2   9.993424595 0.5003253455 0.9990122764\n",
        "ExpDecJac    \n",
        "                 6.0285E¯12 \n",
        "                 3.1913E¯12 \n",
@@ -507,9 +507,9 @@
        "              21 4.2751E¯15  1 5.82997047E¯8 9.234613263E¯8\n",
        "              10 1.8140E¯20  1 1.201260465E¯10 1.902399678E¯10\n",
        "Linear       \n",
-       "               1 8.7699E¯25  1 2 3 4 5 6 7 8 9 10\n",
+       "               1 3.8172E¯25  1 2 3 4 5 6 7 8 9 10\n",
        "LinearNum    \n",
-       "               1 5.6547E¯16  0.9999999986 1.999999996 3.000000002 3.999999994 5.000000008\n",
+       "               1 3.5191E¯15  1.000000015 1.999999981 2.999999998 4.000000011 4.999999987\n",
        "Powell       \n",
        "              57 9.9116E¯31  2.686746826E¯8 ¯2.686746826E¯9 1.720850692E¯8 1.720850692E¯8\n",
        "               1 0.0000E0    0 0 0 0\n",
